# Lamda-Monitor

./: .coverage  .env  .env.example  .gitignore  .mcp.json  README.md  TestingAPI.py  lambda_monitor.db  mcp_wrapper.py  pyproject.toml  requirements.txt  setup.py  start.py
.github/: copilot_instructions.md
.github/prompts/: prd.md
src/: config.py  main.py
src/analyzers/: ai_analyzer.py  base.py
src/database/: connection.py  init_data.py  init_db.py  mcp_client.py  mcp_server.py  models.py
src/fetchers/: base.py  twitter.py
src/frontend/: routes.py
src/frontend/static/: styles.css
src/frontend/templates/: dashboard.html
src/notifiers/: base.py  push_notifier.py
tests/: conftest.py  test_analyzer.py  test_database.py  test_fetchers.py  test_notifier.py
